fixed pioneer and header nav bar overlap z-index problems

--- a/style.css
+++ b/style.css
@@ -3686,7 +3686,7 @@ PIONEER NAV
 
 #pioneer-fixed {
 	position: relative;
-	z-index: 20000;
+	z-index: 9000;
 }
 
 .pioneer-nav .flex {
